--- a/templates/security_registration.html.twig
+++ b/templates/security_registration.html.twig
@@ -14,15 +14,19 @@
     </head>
     <body>
         <nav class="navbar">
-            <div class="navbar-container-left">
-                <div class="navbar-item">
-                    <a href="{{ path('courses') }}" class="navbar-item"><img height=100 src="/images/logo.png" alt="logo"></a>
-                </div>
-            </div>
-            <div class="navbar-container-right">
-            </div>
-        </nav>
-        {% block body %}{% endblock %}
 
+                <div class="navbar-container-left">
+                    <div class="navbar-item">
+                        <a href="{{ path('courses') }}" class="navbar-item"><img height=100 src="/images/logo.png" alt="logo"></a>
+                    </div>
+                </div>
+
+                <div class="navbar-container-right">
+                        <div class="navbar-item">
+                            <a href="{{ path('app_login') }}" class="navbar-item">Login</a> | <a href="{{ path('app_register') }}" class="navbar-item">Register</a>
+                        </div>
+                </div>
+        </nav>
+         {% block body %}{% endblock %}
     </body>
 </html>
