feat: rating, cart total value

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -68,7 +68,7 @@
         <div class="cart-summary-container">
         <h1>Total:</h1>
 
-        <p>2261.65$</p>
+        <p>{{cart.totalValue}} $</p>
         
         <button>
         Checkout
