--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -72,7 +72,7 @@
 .courses-list-element-details-section p { 
     overflow: hidden;
     text-overflow: ellipsis;
-    max-height: 50px;
+    max-height: 55px;
 }
 
 .courses-list-element-price-section{
@@ -128,4 +128,94 @@
 .courses-list-element-details-section-createdby{
     margin-top: 2%;
     margin-bottom: 5%;
+}
+
+
+
+
+
+/* Carousel */
+
+.best-courses-container{
+  background-color: var(--navy);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5vh;
+  
+}
+
+.best-courses-title{
+  color: var(--white);
+}
+
+.owl-carousel{
+    color: var(--lightblue);
+    border-bottom: 1px solid black;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.199);
+}
+
+.owl-carousel-single-tile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.owl-carousel-single-tile-details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+
+.owl-carousel .owl-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    z-index: 10;
+}
+
+.owl-carousel .owl-nav button {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 15%;
+    height: 100%;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.owl-carousel .owl-nav button.owl-prev{
+    background: linear-gradient(90deg, var(--navy), transparent);
+}
+
+.owl-carousel .owl-nav button.owl-next{
+    background: linear-gradient(90deg, transparent, var(--navy));
+}
+
+.owl-carousel .owl-nav button img {
+    width: 50px;
+}
+
+.owl-carousel .owl-nav button.owl-next:hover {
+    background: linear-gradient(90deg, transparent, var(--brightblue));
+}
+
+.owl-carousel .owl-nav button.owl-prev:hover {
+    background: linear-gradient(90deg, var(--brightblue), transparent);
+}
+
+.greeting{
+    color: var(--navy);
+    text-align: center;
+    margin-top: 2em;
 }
