feat: mylearning, purchase system in progres

--- a/assets/styles/cart.css
+++ b/assets/styles/cart.css
@@ -57,6 +57,14 @@
     padding: 1em;
 }
 
+.cart-summary-container h1{
+    text-align: center;
+}
+
+.cart-summary-container h2{
+    margin: 0;
+}
+
 .cart-list-element{
     display: flex;
     align-content: center;
@@ -73,4 +81,73 @@
 
 .cart-list-element button:hover {
     transform: rotate(360deg);
+  }
+
+
+/* From Uiverse.io by cssbuttons-io */ 
+.c-button {
+    color: #000;
+    font-weight: 700;
+    font-size: 16px;
+    text-decoration: none;
+    padding: 0.9em 1.6em;
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .c-button--gooey {
+    color: var(--brightblue);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    border: 4px solid var(--brightblue);
+    border-radius: 0;
+    position: relative;
+    transition: all 700ms ease;
+  }
+  
+  .c-button--gooey .c-button__blobs {
+    height: 100%;
+    filter: url(#goo);
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: -3px;
+    right: -1px;
+    z-index: -1;
+  }
+  
+  .c-button--gooey .c-button__blobs div {
+    background-color: var(--brightblue);
+    width: 34%;
+    height: 100%;
+    border-radius: 100%;
+    position: absolute;
+    transform: scale(1.4) translateY(125%) translateZ(0);
+    transition: all 700ms ease;
+  }
+  
+  .c-button--gooey .c-button__blobs div:nth-child(1) {
+    left: -5%;
+  }
+  
+  .c-button--gooey .c-button__blobs div:nth-child(2) {
+    left: 30%;
+    transition-delay: 60ms;
+  }
+  
+  .c-button--gooey .c-button__blobs div:nth-child(3) {
+    left: 66%;
+    transition-delay: 25ms;
+  }
+  
+  .c-button--gooey:hover {
+    color: var(--white);
+  }
+  
+  .c-button--gooey:hover .c-button__blobs div {
+    transform: scale(1.4) translateY(0) translateZ(0);
   }
