--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -51,10 +51,6 @@
 
 .courses-list-element:hover{
     background-color: var(--lightblue);
-    -webkit-transition: background 0.3s ease-out;
-    -moz-transition: background 0.3s ease-out;
-    -ms-transition: background 0.3s ease-out;
-    -o-transition: background 0.3s ease-out;
     transition: background 0.3s ease-out;
 }
 
@@ -179,7 +175,7 @@
     display: flex;
     justify-content: space-between;
     transform: translateY(-50%);
-    z-index: 10;
+    pointer-events: none;
 }
 
 .owl-carousel .owl-nav button {
@@ -191,7 +187,9 @@
     width: 15%;
     height: 100%;
     cursor: pointer;
+    z-index: 2;
     transition: background 0.3s;
+    pointer-events: all;
 }
 
 .owl-carousel .owl-nav button.owl-prev{
