--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -66,13 +66,28 @@
     </div>
     <div class="cart-container-right">
         <div class="cart-summary-container">
-        <h1>Total:</h1>
+            <h2>Total:</h2>
 
-        <p>{{cart.totalValue}} $</p>
-        
-        <button>
-        Checkout
-        </button>
+            <h1>{{cart.totalValue}} $</h1>
+            
+            <button class="c-button c-button--gooey" 
+                onclick="window.location.href='{{ path('checkout', {cartId: cart.id}) }}'"> 
+                    Checkout
+                <div class="c-button__blobs">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            </button>
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" style="display: block; height: 0; width: 0;">
+                <defs>
+                    <filter id="goo">
+                    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur"></feGaussianBlur>
+                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo"></feColorMatrix>
+                    <feBlend in="SourceGraphic" in2="goo"></feBlend>
+                    </filter>
+                </defs>
+            </svg>
         </div>
     </div>
 
