--- a/templates/courses/index.html.twig
+++ b/templates/courses/index.html.twig
@@ -7,41 +7,48 @@
     <div class="courses-container">
          
         {% if categoryId == null %}
-        <div class="greeting">
-            <h1>Hello, {{app.user.userIdentifier}} what do you want to learn today</h1>
-        </div>
-        
-        <div class="best-courses-container">
-        
-            <div class="best-courses-title">
-                <h1>Check out our top rated courses</h1>
-            </div>
 
-           <div class="owl-carousel" data-controller="owl-carousel">
-                {% for course in coursesTheBestByRating %}
-                    <div class="owl-carousel-single-tile" onclick="window.location.href='{{ path('show_course', {courseId: course.id}) }}';">
-                        <img src="{{ course.imagePath }}" alt="{{ course.name }}">
-                        <div class="owl-carousel-single-tile-details">
-                            <div>
-                                <h3>{{ loop.index }}. {{ course.name }}</h3>
-                            </div>
-                            <div class="courses-list-element-details-section-rating">
-                                <div class="star-container">
-                                    {% for i in range(0, 4, 1) %}
-                                        <span class="star {% if course.ratingAverage >= i %} filled {% endif %}">★</span>
-                                    {% endfor %}
+            {% if app.user %}
+                <div class="greeting">
+                    <h1>Hello, {{app.user.userIdentifier}} what do you want to learn today</h1>
+                </div>
+            {% endif %}
+            
+            
+            <div class="best-courses-container">
+            
+                <div class="best-courses-title">
+                    <h1>Check out our top rated courses</h1>
+                </div>
+
+            <div class="owl-carousel" data-controller="owl-carousel">
+                    {% for course in coursesTheBestByRating %}
+                        <div class="owl-carousel-single-tile" onclick="window.location.href='{{ path('show_course', {courseId: course.id}) }}';">
+                            <img src="{{ course.imagePath }}" alt="{{ course.name }}">
+                            <div class="owl-carousel-single-tile-details">
+                                <div>
+                                    <h3>{{ loop.index }}. {{ course.name }}</h3>
                                 </div>
                                 <div>
-                                    {{course.ratingAverage}}
+                                    {{course.price}} $
+                                </div>
+                                <div class="courses-list-element-details-section-rating">
+                                    <div class="star-container">
+                                        {% for i in range(0, 4, 1) %}
+                                            <span class="star {% if course.ratingAverage >= i %} filled {% endif %}">★</span>
+                                        {% endfor %}
+                                    </div>
+                                    <div>
+                                        {{course.ratingAverage}}
+                                    </div>
                                 </div>
                             </div>
+                            
                         </div>
-                        
-                    </div>
-                {% endfor %}
-            </div>
-            
-        </div>  
+                    {% endfor %}
+                </div>
+                
+            </div>  
         {% endif %}
 
         <div class="course-list-title">
