--- a/assets/styles/showcourse.css
+++ b/assets/styles/showcourse.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    box-shadow: -20px 20px 20px rgba(0, 0, 0, 0.199);
-    border-bottom: 1px solid var(--navy);
     margin-bottom: 10em;
 }
 
@@ -15,12 +13,14 @@
 
 .cshow-container-right{
     width: 20%;
-    border-left: 1px solid var(--navy);
-    padding: 2em;
 }
 
 .cshow-container-left{
     width: 80%;
+}
+
+.cshow-details{
+    margin-left: 2em;
 }
 
 .cshow-course-img{
@@ -59,3 +59,46 @@
     align-items: center;
     justify-items: center;
 }
+
+.cshow-chapters-element-episode{
+    cursor: pointer;
+    list-style: none;
+}
+
+.cshow-chapters-list-container h3 {
+    text-align: center;
+}
+
+.cshow-chapters-list-container{
+    position: fixed;
+    width: 20%;
+    height: 85vh;
+    overflow-y: auto; 
+    border-left: 1px solid var(--navy);
+}
+
+.cshow-chapters-element-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    padding-left: 1em;
+}
+
+.cshow-chapters-element-episode-container {
+    padding-left: 20px;
+    border-left: 2px solid #ddd;
+    margin-top: 5px;
+    display: none;
+}
+
+.cshow-arrow-right, .cshow-arrow-down {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+
+
