--- a/assets/styles/usercoursespanel.css
+++ b/assets/styles/usercoursespanel.css
@@ -23,3 +23,100 @@
     align-items: center;
     justify-content: center;
 }
+
+
+
+
+
+
+
+
+/* myLearning */
+
+.my-learning-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-learning-list-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    margin-top: 3em;
+    margin-bottom: 8em;
+    border-left: 1px solid var(--navy);
+    border-bottom: 1px solid var(--navy);
+    box-shadow: -20px 20px 20px rgba(0, 0, 0, 0.199);
+}
+
+.my-learning-list-element{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 15em;
+    margin: 2em;
+    padding: 1em;
+    cursor: pointer;
+    border: solid 1px var(--navy);
+    overflow: hidden;
+    position: relative;
+}
+
+.my-learning-list-element-course-img img{
+    width: 100%;
+    height: auto;
+    object-fit: cover; 
+}
+
+.my-learning-list-element-play-button-img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.my-learning-list-element:hover .my-learning-list-element-play-button-img {
+    opacity: 0.8;
+}
+
+.my-learning-list-element:hover .my-learning-list-element-play-button-img img {
+    opacity: 1;
+}
+
+.my-learning-list-element-play-button-img img {
+    width: 100px;
+}
+
+.my-learning-list-element-play-button-img{
+    background-color: var(--lightblue);
+}
+
+.my-learning-list-element-rating{
+    display: flex;
+    flex-direction: row;
+}
+
+.my-learning-title h1{
+    text-align: center;
+}
+.my-learning-title{
+    margin-top: 3em;
+}
+
+.my-learning-list-element-rating{
+    margin-bottom: 0.5em;
+}
+
+
